@@ -79,7 +79,7 @@ In alphabetical order (by last name)
 ** Patch [#10920] Added support for not implemented examples
 * Jake Howerton
 ** Port of Kevin Clark's ARTS to RSpec
-* KAKUTANI Shintaro
+* Shintaro KAKUTANI
 ** Patches for coloured progress<br>
 ** Assorted Rails patches
 * Erik Kastner
@@ -107,6 +107,8 @@ In alphabetical order (by last name)
 ** Modified mocha to allow for its use outside of test/unit
 * Micah Martin
 ** Spec::Rails patches for partials
+* Kyosuke MOROHASHI
+** Patch [#11807] Daemonize spec_server and rake tasks to manage them.
 * Bret Pettichord
 ** Patch [#10473] obj.should exist (new matcher)
 * Jay Phillips
