@@ -87,4 +87,39 @@ namespace :spec do
       end
     end
   end
+
+  namespace :server do
+    daemonized_server_pid = File.expand_path("spec_server.pid", RAILS_ROOT + "/tmp")
+
+    desc "start spec_server."
+    task :start do
+      if File.exist?(daemonized_server_pid)
+        $stderr.puts "spec_server is already running."
+      else
+        $stderr.puts "Starting up spec server."
+        system("ruby", "script/spec_server", "--daemon", "--pid", daemonized_server_pid)
+      end
+    end
+
+    desc "stop spec_server."
+    task :stop do
+      unless File.exist?(daemonized_server_pid)
+        $stderr.puts "No server running."
+      else
+        $stderr.puts "Shutting down spec_server."
+        system("kill", "-s", "TERM", File.read(daemonized_server_pid).strip) && 
+        File.delete(daemonized_server_pid)
+      end
+    end
+
+    desc "reload spec_server."
+    task :restart do
+      unless File.exist?(daemonized_server_pid)
+        $stderr.puts "No server running."
+      else
+        $stderr.puts "Reloading down spec_server."
+        system("kill", "-s", "USR2", File.read(daemonized_server_pid).strip)
+      end
+    end
+  end
 end
